--- a/index.html
+++ b/index.html
@@ -50,11 +50,15 @@
     <!-- list of games funded by Sea Monster -->
     <h2>Our Games</h2>
     <p>Check out each of our games below!</p>
+    <!-- Added Feature: Search -->
+     <div id = "interactive-elems">
+     <input type = "text" id = "search" placeholder = "Search here...">
     <div id="button-container">
-        <button id="unfunded-btn">Show Unfunded Only</button>
-        <button id="funded-btn">Show Funded Only</button>
-        <button id="all-btn">Show All Games</button>
+        <button id="unfunded-btn">Unfunded</button>
+        <button id="funded-btn">Funded</button>
+        <button id="all-btn">All</button>
     </div>
+</div>
     <div id="games-container">
 
     </div>
